Name:                pastie
Version:             0.1
Synopsis:            A simple paste bin web app
Description:         A paste bin web using the snap web framework.
License:             BSD3
License-file:        LICENSE
Author:              Ben Armston <ben.armston@googlemail.com>
Maintainer:          ben.armston@googlemail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Extra-source-files:  LICENSE
Cabal-version:       >=1.6

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable pastie
  hs-source-dirs: src
  main-is: Main.hs

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: hint >= 0.3.2 && < 0.4

  Build-depends:
    base >= 4 && < 5
    , bytestring >= 0.9.1 && < 0.10
    , mtl >= 2 && < 3
    , snap == 0.4.*
    , snap-core == 0.4.*
    , snap-server == 0.4.*
    , time >= 1.1 && < 1.3
    , blaze-html >= 0.4.0.0 && < 0.5

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-orphans

